<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <!-- margintop added to everyone but geo mean because geo mean is inexplicably padded on top -->
        <Button
            android:id="@+id/button1"
            android:layout_marginTop="11dp"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="locationBtn"
            android:text="@string/location" />

        <Button
            android:id="@+id/button2"
            android:layout_marginTop="11dp"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="enteroBtn"
            android:text="@string/entero" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="geoBtn"
            android:text="@string/egeo" />

        <Button
            android:id="@+id/button4"
            android:layout_marginTop="11dp"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:onClick="advisoryBtn"
            android:text="@string/advisory" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/SampleLocation1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/beach1"
            android:textAppearance="?android:attr/textAppearanceLarge" 
            android:clickable="true"
            android:onClick="onClick_SampleLocation1"/>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:src="@drawable/green_circle" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:src="@drawable/green_circle" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="23dp"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/SampleLocation2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beach1"
            android:textAppearance="?android:attr/textAppearanceLarge"
               android:clickable="true"
            android:onClick="onClick_SampleLocation2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:src="@drawable/green_circle" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:src="@drawable/green_circle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:layout_weight="1"  >

        <TextView
            android:id="@+id/SampleLocation3"
            android:layout_width="0dp"
            android:layout_weight="1" 
            android:layout_height="wrap_content"
            android:text="@string/beach1"
            android:textAppearance="?android:attr/textAppearanceLarge"
               android:clickable="true"
            android:onClick="onClick_SampleLocation3" />


        <ImageView
            android:id="@+id/imageView5"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/orange_circle" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_weight="1" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:src="@drawable/green_circle" />

        <TextView
            android:id="@+id/textView6"
            android:layout_weight="1" 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/yes"
            android:textAppearance="?android:attr/textAppearanceLarge" />


    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="23dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newsfeed" />
    </TableRow>

</TableLayout>